--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         new Vue({
             el: "#app",
             data: {
-                domin: 'http://www.visasiv.cn',
+                domin: 'https://www.visasiv.cn',
                 arr: []
             },
             mounted() {
